--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,10 @@
     <string name="editText2">пароль</string>
     <string name="switch1">получать информацию о выгодных предложениях</string>
     <string name="checkBox">Согласие на обработку персональных данных</string>
-    <string name="next">Next</string>
+    <string name="btn_next">Next</string>
     <string name="textView3">Укажите дату рождения</string>
     <string name="textView4">Введите номер телефона</string>
     <string name="editText4">номер телефона</string>
     <string name="textView5">ems - ширина буквы M в заданном размере английского шрифта. Для неанглийского шрифта это ширина самой широкой Буквы в этом шрифте.</string>
+    <string name="btn_back">Back</string>
 </resources>
